# bombom

./: .env.example  .gitignore  .gitmodules  BRIEF.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  orchestrator.md  security-reviewer.md  verification.md
.claude/hooks/: session-start.sh
.claude/rules/: agents.md  ai-constitution.md  development-workflow.md  output-style.md
.github/workflows/: pages.yml
bombom/: __init__.py  candidates.py  cli.py  dashboard.py  export.py  gitops.py  health.py  hierarchy.py  overview.py  search.py  workspace.py
bombom/api/: __init__.py  app.py
bombom/bom/: __init__.py  engine.py  pricing.py
bombom/catalog/: __init__.py  _yaml.py  index.py  models.py  parse.py  paths.py  query.py  (+2 more)
categories/: overlay.yaml
docs/: DESIGN.md  HANDOFF.md  ROADMAP.md
memory/: MEMORY.md  context-log.md  session-handoff-LATEST.md
meta/: fields.yaml
pricing/: arista.yaml  dell.yaml
scripts/: build_static_app.py  build_static_demo.py  demo.py  showcase.py
tests/: conftest.py  test_bom.py  test_candidates.py  test_catalog_detail.py  test_confirm.py  test_demo_seed.py  test_drawio.py  test_edit.py  test_health.py  test_hierarchy.py  test_index_query.py  test_layout.py  test_overview.py  test_parse.py  test_release_diff.py  test_report.py  test_search.py  test_smoke.py  test_validate.py  test_web.py
web/: candidates.html  dashboard.html  diff.html  editor.html  health.html  home.html  layout.html  manage.html  place.html  placed.html  report.html  search.html  summary.html  viewer.html  zone.html
(+57 files in other folders)
