[project]
name = "bombom"
version = "0.1.0"
description = "Cloud-infra hardware design and BOM/CAPEX tool"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4.20",
    "referencing>=0.30",
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "httpx>=0.27"]

[project.scripts]
bombom = "bombom.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bombom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
